# SisterAppPEC

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  DDD.md  DDD_Laboratorio_SisTerApp3D_v1.0.md  DDD_Modelo_Integrado_Ecofuncional_Paisagem_Campestre_v1_2.tex  DDD_Padroes_Manchas_Solo.md  DDD_Padroes_Manchas_Solo_legacy.md  DDD_Padroes_Manchas_Solo_v0.md  DDD_Representacao_Vegetacao_Campestre.md  DDD_SoilSystem.txt  DDD_VegetacaoCampestre_RespostaDisturbio.aux  DDD_VegetacaoCampestre_RespostaDisturbio.out  DDD_VegetacaoCampestre_RespostaDisturbio.tex  DDD_Vegetacao_Campestre_Pastoril.md  LICENSE  Makefile  README.md  SiBCS.md  Solos_SiBCS.txt  app_log.txt  build_debug.txt  build_debug_cleanup.txt  build_debug_final.txt  build_error.txt  build_error_debug.txt  build_log.txt  build_log_10.txt  build_log_12.txt  build_log_13.txt  build_log_15.txt  build_log_16.txt  build_log_17.txt  build_log_18.txt  build_log_19.txt  build_log_2.txt  build_log_20.txt  build_log_22.txt  (+77 more)
assets/models/: soil_color.json
data/: descriptors.csv
docs/: Arquitetura_Tecnica_Global.md  DDD_Arquitetura_Vetorial.md  DDD_Ecologia_Vegetacao.md  DDD_Implementacao_ML.md  DDD_Machine_Learning.md  DDD_Sistema_Solo.md  DDD_Visualizacao_Vegetacao.md  SiBCS.md  analise_projeto_sisterapp.md.resolved  engineering_review.md  evaluation_vegetation_ddd.md  legacy_technical_evaluation_v3.8.4.md  manual_tecnico_ml.md  manual_tecnico_modelos.aux  manual_tecnico_modelos.md  manual_tecnico_modelos.out  manual_tecnico_modelos.tex  manual_tecnico_modelos.toc  manual_teorico_sistemas.md  sistema_drenagem.aux  sistema_drenagem.md  sistema_drenagem.out  sistema_drenagem.tex  technical_evaluation_v330.md  technical_evaluation_v4.0.0.md
shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  campos_vegetation.frag  environment.frag  environment.frag.spv  environment.vert  environment.vert.spv  red.frag  terrain.frag  terrain.frag.spv  voxel.frag  voxel.frag.spv  voxel.vert  voxel.vert.spv
src/: imgui_backend.cpp  imgui_backend.h  init_sdl.cpp  init_sdl.h  log.h  renderer.cpp  renderer.h  shader_loader.cpp  shader_loader.h  vk_utils.h  voxel_scene.cpp  voxel_scene.h  world.cpp  world.h
src/core/: application.cpp  application.h  command_pool.cpp  command_pool.h  graphics_context.cpp  graphics_context.h  input_manager.cpp  input_manager.h  preferences.cpp  preferences.h  swapchain.cpp  swapchain.h  sync_objects.cpp  sync_objects.h  version.h  vk_utils.h
src/graphics/: animation.cpp  animation.h  camera.cpp  camera.h  geometry_utils.cpp  geometry_utils.h  material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  voxel_terrain.cpp  voxel_terrain.h
src/landscape/: hydro_system.cpp  hydro_system.h  landscape_types.h  lithology_registry.h  resilience_evaluator.h  sibcs_taxonomy.h  soil_services.cpp  soil_services.h  soil_system.cpp  soil_system.h
src/math/: frustum.cpp  frustum.h  intersection.h  math_types.h  noise.cpp  noise.h
src/ml/: ml_service.cpp  ml_service.h  perceptron.cpp  perceptron.h
src/resources/: buffer.cpp  buffer.h
src/terrain/: hydrology_report.cpp  hydrology_report.h  landscape_metrics.cpp  landscape_metrics.h  pattern_validator.cpp  pattern_validator.h  slope_config.h  soil_palette.h  terrain_generator.cpp  terrain_generator.h  terrain_map.cpp  terrain_map.h  terrain_renderer.cpp  terrain_renderer.h  watershed.cpp  watershed.h
tests/: test_ml_integration.cpp  test_ml_service.cpp  test_pattern_validator.cpp  test_vegetation.cpp
(+8 files in other folders)
